correct trigger for guardduty setup landing zone

--- a/components/01-guardduty.yaml
+++ b/components/01-guardduty.yaml
@@ -15,7 +15,7 @@ Resources:
           - founopticum.test # allows testing the trigger
         detail:
           serviceEventDetails:
-            createManagedAccountStatus:
+            setupLandingZoneStatus:
               state:
                 - SUCCEEDED
           eventName:
